--- a/MUMPS/src/main/java/View/CreateAccount.form
+++ b/MUMPS/src/main/java/View/CreateAccount.form
@@ -65,8 +65,8 @@
                               </Group>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="ftxtDob" min="-2" pref="175" max="-2" attributes="0"/>
-                                  <Component id="btnMale" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btnFemale" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="radMale" min="-2" max="-2" attributes="0"/>
+                                  <Component id="radFemale" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -95,9 +95,9 @@
                               </Group>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="btnCancelAccount" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
-                              <Component id="btnSubmitAccount" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnSubmit" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -137,7 +137,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblGender" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnMale" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="radMale" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -166,13 +166,13 @@
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btnSubmitAccount" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnCancelAccount" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnSubmit" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnCancel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="btnFemale" min="-2" max="-2" attributes="0"/>
+                      <Component id="radFemale" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -249,12 +249,12 @@
         <Property name="text" type="java.lang.String" value="Confirm password"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnSubmitAccount">
+    <Component class="javax.swing.JButton" name="btnSubmit">
       <Properties>
         <Property name="text" type="java.lang.String" value="Submit"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnCancelAccount">
+    <Component class="javax.swing.JButton" name="btnCancel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cancel"/>
       </Properties>
@@ -279,7 +279,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtConfirmPassword">
     </Component>
-    <Component class="javax.swing.JRadioButton" name="btnMale">
+    <Component class="javax.swing.JRadioButton" name="radMale">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
           <ComponentRef name="grpGender"/>
@@ -287,7 +287,7 @@
         <Property name="text" type="java.lang.String" value="Male"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JRadioButton" name="btnFemale">
+    <Component class="javax.swing.JRadioButton" name="radFemale">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
           <ComponentRef name="grpGender"/>
