--- a/MUMPS/src/main/java/View/DoctorHome.form
+++ b/MUMPS/src/main/java/View/DoctorHome.form
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
-  <NonVisualComponents>
-    <Container class="javax.swing.JToolBar" name="jToolBar1">
-      <Properties>
-        <Property name="rollover" type="boolean" value="true"/>
-      </Properties>
-
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
-    </Container>
-  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -35,34 +26,34 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblMumpsName" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblTitle" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" alignment="0" groupAlignment="1" attributes="0">
-                      <Component id="lblContact" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <Component id="btnDoctors" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnCloseAccount" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="lblMumpsName" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblTitle" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="lblMumps" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
+                              <Component id="lblUserLoggedIn" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="btnLogOut" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="lblMumps" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="lblUserLoggedIn" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnLogOut" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="btnAppts" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnHistory" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="btnPrescriptions" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnFeedback" min="-2" pref="99" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="btnPatients" min="-2" pref="107" max="-2" attributes="0"/>
+                          <Component id="btnMedicines" min="-2" pref="107" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,8 +62,8 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lblMumps" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="lblMumps" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                       <Component id="btnLogOut" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="lblUserLoggedIn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -84,40 +75,38 @@
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnAppts" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnHistory" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnPrescriptions" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnPatients" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btnDoctors" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnCloseAccount" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnFeedback" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnMedicines" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="lblContact" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="25" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnHistory">
+    <Component class="javax.swing.JLabel" name="lblMumpsName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="My history"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="18" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="My Uni Medical Practice System"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnPrescriptions">
+    <Component class="javax.swing.JLabel" name="lblUserLoggedIn">
       <Properties>
-        <Property name="text" type="java.lang.String" value="My prescriptions"/>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="12" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Username"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnDoctors">
+    <Component class="javax.swing.JButton" name="btnAppts">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Doctors"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JLabel" name="lblContact">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Contact us on: 01992 646123"/>
+        <Property name="text" type="java.lang.String" value="Appointments"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnLogOut">
@@ -135,7 +124,7 @@
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Patient home"/>
+        <Property name="text" type="java.lang.String" value="Doctor home"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
@@ -150,30 +139,19 @@
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblMumpsName">
+    <Component class="javax.swing.JButton" name="btnPatients">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="18" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="My Uni Medical Practice System"/>
+        <Property name="text" type="java.lang.String" value="Patients"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblUserLoggedIn">
+    <Component class="javax.swing.JButton" name="btnFeedback">
       <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="12" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Username"/>
+        <Property name="text" type="java.lang.String" value="My feedback"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btnCloseAccount">
+    <Component class="javax.swing.JButton" name="btnMedicines">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Terminate my account"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btnAppts">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Appointments"/>
+        <Property name="text" type="java.lang.String" value="Medicines"/>
       </Properties>
     </Component>
   </SubComponents>
