--- a/MUMPS/src/main/java/View/PatientAppointments.form
+++ b/MUMPS/src/main/java/View/PatientAppointments.form
@@ -141,7 +141,7 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnPatientCancelAppt" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnCancelAppt" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblPatientFutureAppt" alignment="0" max="32767" attributes="0"/>
                       <Component id="lblPatientBookedAppt" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -157,7 +157,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="lblPatientFutureAppt" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="btnPatientCancelAppt" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCancelAppt" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -174,7 +174,7 @@
             <Property name="text" type="java.lang.String" value="--"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="btnPatientCancelAppt">
+        <Component class="javax.swing.JButton" name="btnCancelAppt">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cancel appointment"/>
           </Properties>
@@ -202,11 +202,11 @@
                           <EmptySpace min="-2" pref="103" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lblTime" min="-2" max="-2" attributes="0"/>
-                              <Component id="drpPatientBookTime" min="-2" max="-2" attributes="0"/>
+                              <Component id="drpTime" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="drpPatientBookDoctor" min="-2" max="-2" attributes="0"/>
+                              <Component id="drpDoctor" min="-2" max="-2" attributes="0"/>
                               <Component id="lblDoctor" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -241,8 +241,8 @@
                   </Group>
                   <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="drpPatientBookDoctor" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="drpPatientBookTime" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="drpDoctor" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="drpTime" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                   <Component id="btnPatientBookAppt" min="-2" max="-2" attributes="0"/>
@@ -274,7 +274,7 @@
             <Property name="text" type="java.lang.String" value="Date"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="drpPatientBookDoctor">
+        <Component class="javax.swing.JComboBox" name="drpDoctor">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
@@ -289,7 +289,7 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JComboBox" name="drpPatientBookTime">
+        <Component class="javax.swing.JComboBox" name="drpTime">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="24">
