--- a/MUMPS/src/main/java/View/Login.form
+++ b/MUMPS/src/main/java/View/Login.form
@@ -47,8 +47,8 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblContact" min="-2" pref="152" max="-2" attributes="0"/>
-                                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="lblContact" min="-2" pref="198" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="lblHelp" max="32767" attributes="0"/>
                                       <Component id="lblHelp2" min="-2" pref="169" max="-2" attributes="0"/>
                                   </Group>
@@ -151,6 +151,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Log in"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLoginActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnCreateAccount">
       <Properties>
