--- a/MUMPS/src/main/java/View/SecretaryHome.form
+++ b/MUMPS/src/main/java/View/SecretaryHome.form
@@ -264,11 +264,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Approve"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnApproveActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnReject">
       <Properties>
         <Property name="text" type="java.lang.String" value="Reject"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRejectActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
