--- a/MUMPS/src/main/java/View/DoctorPatients.form
+++ b/MUMPS/src/main/java/View/DoctorPatients.form
@@ -185,9 +185,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="drpPatients">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="drpPatientsActionPerformed"/>
-      </Events>
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Model.PopulateLists.PopulatePatientsList()" type="code"/>
+        </Property>
+      </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
