--- a/MUMPS/src/main/java/View/FeedbackDoctors.form
+++ b/MUMPS/src/main/java/View/FeedbackDoctors.form
@@ -179,9 +179,9 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="3" rowCount="4">
-                <Column editable="false" title="Doctor&apos;s name" type="java.lang.Object"/>
-                <Column editable="false" title="Average rating" type="java.lang.Object"/>
-                <Column editable="false" title="Comments" type="java.lang.Object"/>
+                <Column editable="false" title="Doctor&apos;s name" type="java.lang.String"/>
+                <Column editable="false" title="Average rating" type="java.lang.Float"/>
+                <Column editable="false" title="Comments" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -206,7 +206,7 @@
             <Property name="enabled" type="boolean" value="false"/>
             <Property name="rowSelectionAllowed" type="boolean" value="false"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
-              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+              <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
           </Properties>
         </Component>
@@ -284,13 +284,8 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="drpDoctor">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Dr. Nuts"/>
-            <StringItem index="1" value="Dr. Nice"/>
-            <StringItem index="2" value="Dr. Nasty"/>
-            <StringItem index="3" value="Dr. Who"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Model.PopulateLists.PopulateDoctorsList()" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
