--- a/MUMPS/src/main/java/View/StaffAppointments.form
+++ b/MUMPS/src/main/java/View/StaffAppointments.form
@@ -260,13 +260,8 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="drpDoctor">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Model.PopulateLists.PopulateDoctorsList()" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
@@ -280,11 +275,8 @@
     </Component>
     <Component class="javax.swing.JComboBox" name="drpPatient">
       <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Patient 1"/>
-            <StringItem index="1" value="Patient 2"/>
-          </StringArray>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="Model.PopulateLists.PopulatePatientsList()" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
